# platformer

./: .gitignore  CMakeLists.txt  engine-cpp.sln
Debug/: engine-cpp.ilk  stdout.txt
engine-cpp/: .gitignore  engine-cpp.vcxproj  engine-cpp.vcxproj.filters
engine-cpp/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  engine-cpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
engine-cpp/src/: AABB.cpp  Color.cpp  Color.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Rectangle.cpp  Rectangle.h  Texture.cpp  Texture.h  Vector2f.cpp  exmath.cpp  main.cpp
src/: AABB.cpp  AABB.h  CMakeLists.txt  CMakeLists.txt~  Color.cpp  Color.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  IInputListener.h  LinkedList.cpp  LinkedList.h  List.h  Texture.cpp  Texture.cpp~  Texture.h  Vector2f.cpp  Vector2f.h  exmath.cpp  exmath.h  exmath.h~  main.cpp
src/Engine/: AABB.h  CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  Graphics.cpp  IInputListener.h  LinkedList.cpp  LinkedList.h  List.h  Texture.cpp  Texture.h  Vector2f.cpp
src/Game/: CMakeLists.txt  Player.cpp  Player.h  main.cpp
